# hng_14_CLI

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
insighta/: cli.py  client.py  config.py  display.py
insighta/commands/: profiles.py
tests/: test_cli.py
