[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "insighta"
version = "1.0.0"
description = "CLI for the Insighta Labs+ profile intelligence platform"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13",
]

[project.scripts]
insighta = "insighta.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
